# tm1py

./: .gitignore  .readthedocs.yml  CNAME  CONTRIBUTING.md  CellService.py  LICENSE  README.md  README.rst  TM1py.py  __init__.py  conf.py  dev.ipynb  mkdocs.yml  pyproject.toml  sample.py  setup.py  temp.py  test.py  tmp.py  tst.py  versions.json
.github/: RELEASE_LABELS_GUIDE.md
2.2.1/: 404.html  index.html  objects.inv  sitemap.xml
2.2.5/: 404.html  gen_ref_stubs.py  index.html  objects.inv  sitemap.xml
Exceptions/: Exceptions.py  __init__.py
Objects/: Annotation.py  Application.py  Axis.py  Chore.py  ChoreFrequency.py  ChoreStartTime.py  Cube.py  Dimension.py  ElementAttribute.py  GitCommit.py  Hierarchy.py  MDXView.py  NativeView.py  Process.py  Rules.py  Server.py  Subset.py  TM1Object.py
Samples/: Annotation.py  MDX Stress Test.py  MDXView.py  NativeView vs MDX.py  Process.py  Subset.py  View.py  analyse cube rules.py  check.py  cleanup model.py  create new admin user.py  cube data into pandas dataframe.py  delete views subsets through regex.py  find unused dimensions.py  find unused groups.py  get all cubes with skipcheck on.py  get number cube cells.py  processing feeders time.py  query data through mdx view.py  query users and groups.py  query users.py  reschedule all chores + 1 hour.py  run TI Processes in parallel.py  run TI code.py  sandbox.py  sandbox2.py  sandbox3.py  tm1 rest api stress test.py  write data FAST.py
Services/: AnnotationService.py  ChoreService.py  CubeService.py  DataService.py  DimensionService.py  ElementService.py  HierarchyService.py  InfoService.py  MonitoringService.py  ObjectService.py  ProcessService.py  RESTService.py  RestService.py  SubsetService.py  TM1Service.py  ThreadService.py  UserService.py  ViewService.py
TM1py/: __init__.py
Tests/: Annotation.py  AnnotationService.py  AnnotationService_test.py  Application.py  ApplicationService.py  ApplicationService_test.py  CaseAndSpaceInsensitiveDict_test.py  CaseAndSpaceInsensitiveSet_test.py  CaseAndSpaceInsensitiveTuplesDict_test.py  Cell.py  CellService.py  CellService_columnar_test.py  CellService_test.py  Chore.py  ChoreService.py  ChoreService_test.py  ChoreStartTime.py  ChoreStartTime_test.py  Chore_test.py  Connection.py  Cube.py  CubeService.py  CubeService_test.py  Cube_test.py  Data.py  Dimension.py  DimensionService.py  DimensionService_test.py  Element.py  ElementAttribute_test.py  ElementService.py  ElementService_filtering_helpers_test.py  ElementService_test.py  Element_test.py  FileService_test.py  Hierarchy.py  HierarchyService.py  HierarchyService_test.py  Hierarchy_test.py  MDXUtils.py  (+57 more)
Utils/: MDXUtils.py  Utils.py  __init__.py
docs/: CNAME  Makefile  README.md  api.rst  archive.md  conf.py  index.md  (+7 more)
(+373 files in other folders)
