[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ["py37"]

[tool.ruff]
target-version = "py37"

exclude = [
    "build",
    "dist",
    ".git",
    "__pycache__",
    "docs",
    "Tests/resources",
]

ignore = [
    "F403",  #undefined-local-with-import-star"
]