[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TM1py"
version = "2.2.2"
description = "A python module for TM1."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Marius Wirtz", email = "MWirtz@cubewise.com"}
]
keywords = ["TM1", "IBM Cognos TM1", "Planning Analytics", "PA", "Cognos"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
]
requires-python = ">=3.7"
dependencies = [
    "ijson",
    "requests",
    "pytz",
    'requests_negotiate_sspi; platform_system=="Windows"',
    "mdxpy>=1.3.1",
]

[project.optional-dependencies]
pandas = ["pandas"]
dev = [
    "pytest",
    "pytest-xdist",
    "python-dateutil",
    "black",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/cubewise-code/tm1py"
Download = "https://github.com/cubewise-code/tm1py/releases/latest"

[tool.setuptools.packages.find]
include = ["TM1py*"]

[tool.black]
line-length = 120
target-version = ["py37"]

[tool.ruff]
target-version = "py37"

extend-exclude = [
    "build",
    "__pycache__",
    "docs",
    "Tests/resources",
]

[tool.ruff.lint]
select = [
    "E4", # imports
    "E7", # pycodestyle
    "E9", # io-error
    "F",  # pyflakes
    "I", # isort
]
ignore = [
    "F403",  #undefined-local-with-import-star"
]